--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,31 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.futakotome</groupId>
-    <artifactId>tenantx-javaagent</artifactId>
+    <artifactId>agent-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>agent-premain</module>
+    </modules>
+    <packaging>pom</packaging>
+
+    <name>${project.groupId}:${project.artifactId}</name>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.testSource>8</maven.compiler.testSource>
         <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.testTarget>8</maven.compiler.testTarget>
+
+        <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
+        <maven.compiler.errorprone>true</maven.compiler.errorprone>
+
+        <maven-deploy-plugin.skip>false</maven-deploy-plugin.skip>
+
+        <version.spring>5.0.15.RELEASE</version.spring>
+        <version.byte-buddy>1.10.21</version.byte-buddy>
     </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>net.bytebuddy</groupId>
@@ -42,28 +60,46 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptorRefs>jar-with-dependencies</descriptorRefs>
-                    <archive>
-                        <manifestFile>
-                            src/main/resources/META-INF/MANIFEST.MF
-                        </manifestFile>
-                    </archive>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>attached</goal>
-                        </goals>
-                        <phase>package</phase>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
+        <!--        <plugins>-->
+        <!--            <plugin>-->
+        <!--                <groupId>org.apache.maven.plugins</groupId>-->
+        <!--                <artifactId>maven-assembly-plugin</artifactId>-->
+        <!--                <configuration>-->
+        <!--                    <descriptorRefs>jar-with-dependencies</descriptorRefs>-->
+        <!--                    <archive>-->
+        <!--                        <manifestFile>-->
+        <!--                            src/main/resources/META-INF/MANIFEST.MF-->
+        <!--                        </manifestFile>-->
+        <!--                    </archive>-->
+        <!--                </configuration>-->
+        <!--                <executions>-->
+        <!--                    <execution>-->
+        <!--                        <goals>-->
+        <!--                            <goal>attached</goal>-->
+        <!--                        </goals>-->
+        <!--                        <phase>package</phase>-->
+        <!--                    </execution>-->
+        <!--                </executions>-->
+        <!--            </plugin>-->
+        <!--        </plugins>-->
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>3.2.0</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.22.2</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.2.0</version>
+                </plugin>
+            </plugins>
+
+        </pluginManagement>
     </build>
 </project>
