--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>agent-premain</module>
+        <module>agent-core</module>
+        <module>agent-sdk</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -27,63 +29,19 @@
 
         <version.spring>5.0.15.RELEASE</version.spring>
         <version.byte-buddy>1.10.21</version.byte-buddy>
+        <version.slf4j>1.7.30</version.slf4j>
+        <version.asm>9.1</version.asm>
     </properties>
-
-
     <dependencies>
         <dependency>
-            <groupId>net.bytebuddy</groupId>
-            <artifactId>byte-buddy</artifactId>
-            <version>1.10.19</version>
-        </dependency>
-        <dependency>
-            <groupId>net.bytebuddy</groupId>
-            <artifactId>byte-buddy-agent</artifactId>
-            <version>1.10.19</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
+            <optional>true</optional>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>5.0.15.RELEASE</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
-
     <build>
-        <!--        <plugins>-->
-        <!--            <plugin>-->
-        <!--                <groupId>org.apache.maven.plugins</groupId>-->
-        <!--                <artifactId>maven-assembly-plugin</artifactId>-->
-        <!--                <configuration>-->
-        <!--                    <descriptorRefs>jar-with-dependencies</descriptorRefs>-->
-        <!--                    <archive>-->
-        <!--                        <manifestFile>-->
-        <!--                            src/main/resources/META-INF/MANIFEST.MF-->
-        <!--                        </manifestFile>-->
-        <!--                    </archive>-->
-        <!--                </configuration>-->
-        <!--                <executions>-->
-        <!--                    <execution>-->
-        <!--                        <goals>-->
-        <!--                            <goal>attached</goal>-->
-        <!--                        </goals>-->
-        <!--                        <phase>package</phase>-->
-        <!--                    </execution>-->
-        <!--                </executions>-->
-        <!--            </plugin>-->
-        <!--        </plugins>-->
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -96,6 +54,10 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.2.0</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-source-plugin</artifactId>
                     <version>3.2.0</version>
                 </plugin>
             </plugins>
